Signin.html is added to login.html file

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -18,7 +18,7 @@
         <button>Login</button>
         <div id="signup">
             <p>Don't have an account?</p>
-            <a href="#">Sign Up</a>
+            <a href="signin.html">Sign Up</a>
         </div>
     </div>
 
