reachus file is added to index.html file

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -70,13 +70,13 @@
             <div class="dropdown">
                 <button class="dropbtn">EVENTS <i class="fa-solid fa-angle-down"></i></button>
                 <div class="dropdown-content">
-                    <a href="#">News</a>
-                    <a href="#">Events</a>
+                    <a href="news.html">News</a>
+                    <a href="events.html">Events</a>
                 </div>
             </div>
-            <button>INTERNAL</button>
-            <button>GALLERY</button>
-            <button>REACH US</button>
+            <button id="internal-btn">INTERNAL</button>
+            <button id="gallery-btn">GALLERY</button>
+            <button id="reachus-btn">REACH US</button>
             <button id="login-btn">LOGIN</button>
         </nav>
 
