signin.html page header added

--- a/Frontend/signin.html
+++ b/Frontend/signin.html
@@ -14,6 +14,16 @@
 
 <body>
 
+    <header>
+        <div>
+            <img src="./Images/sit-logo.jpg" id="sit-logo">
+        </div>
+        <div>
+            <h1>DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING</h1>
+            <h2>SILIGURI INSTITUTE OF TECHNOLOGY</h2>
+        </div>
+    </header>
+
     <div class="container">
         <form action="#" method="post" enctype="multipart/form-data">
             <h1>Student Registration Form</h1>
